# duckduckgo-instant-answer-cli

./: Cargo.toml  README.md
src/: api.rs  main.rs
