[package]
name = "duckduckgo-instant-answer-cli"
version = "0.1.0"
authors = ["jeremysamuel13 <70209502+jeremysamuel13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
exitfailure = "0.5.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.8.0", features = ["full"] }